--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,10 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Caveat+Brush&display=swap"
     />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Bangers&display=swap"
+    />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
